[package]
name = "grimmod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.3.1"
glob = "0.3.1"
image = "0.24.7"
lazy_static = "1.4.0"
paste = "1.0.14"

libvpx-native-sys = "5.0.13"
webm-iterable = "0.6.2"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.dev.package."*"]
opt-level = 2
