[package]
name = "grimmod"
version = "1.0.0"
authors = ["TheHexagonCodes <the@hexagon.codes>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.3.1"
glob = "0.3.1"
image = "0.24.7"
once_cell = "1.19.0"
paste = "1.0.14"
toml = "0.8.12"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"

libvpx-native-sys = "5.0.13"
webm-iterable = "0.6.2"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
debug = false
strip = true

[profile.dev.package."*"]
opt-level = 2
